--- a/src/components/AlphaAnalysis/watchlist/Watchlist.scss
+++ b/src/components/AlphaAnalysis/watchlist/Watchlist.scss
@@ -53,7 +53,10 @@
                 align-items: center;
                 justify-content: center;
                 height: 100%;
+                width: fit-content;
+                background-color: red;
                 img{
+                    width: 100%;
                     height: 100%;
                 }
             }
