--- a/src/components/AlphaAnalysis/Portfolios/Portfolios.scss
+++ b/src/components/AlphaAnalysis/Portfolios/Portfolios.scss
@@ -1,65 +1,93 @@
 @import "../../../global.scss";
-.Portfolio{
+
+.Portfolio {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #55697e;
     overflow: hidden;
-    .topWrapper{
+
+    .topWrapper {
         padding-top: 5%;
         width: 75%;
         height: 20%;
         display: flex;
         align-items: center;
         overflow: hidden;
-        h1{
-            @include mobile{
+
+        h1 {
+            @include mobile {
                 font-size: 20px;
             }
+
             color: white;
             font-size: 50px;
             font-weight: 100;
         }
     }
-    .wrapper{
+
+    .wrapper {
         height: 100%;
         width: 75%;
-        @include mobile{
+
+        @include mobile {
             width: 100%;
         }
+
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items:flex-start; 
-        overflow: hidden;       
-        .andre{
-            flex:.33;
+        align-items:flex-start;
+        overflow: hidden;
+
+        .andre {
+            flex: .33;
             display: flex;
             justify-content: center;
             align-items: center;
-            .avatar{
+
+            .avatar {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                .top{
+
+                .top {
                     height: 100%;
                     width: 100%;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    img{
-                        border-radius: 50%;   
-                        height: auto;
-                        width: auto;            
+
+                    img {
+                        @include mobile {
+                            max-height: 125px;
+                            max-width: 125px;
+                        }
+
+                        @include tablet {
+                            max-height: 150px;
+                            max-width: 150px;
+                        }
+
+                        @include large {
+                            max-height: 200px;
+                            max-width: 200px;
+                        }
+
+                        max-width: 200px;
+                        max-width: 200px;
+                        border-radius: 50%;
                     }
                 }
-                .bottom{
-                    h1{
-                        @include mobile{
+
+                .bottom {
+                    h1 {
+                        @include mobile {
                             font-size: 20px;
                         }
+
                         font-weight: 300;
                         color: white;
                         height: auto;
@@ -67,46 +95,69 @@
                         padding-top: 30px;
                         text-align: center;
                     }
-                    h2{
-                        @include mobile{
+
+                    h2 {
+                        @include mobile {
                             font-size: 12px;
                         }
+
                         font-weight: 100;
                         font-size: 15px;
                         text-align: center;
                         color: white;
                     }
-                
+
                 }
             }
         }
-        .lawrence{
-            flex:.33;
+
+        .lawrence {
+            flex: .33;
             display: flex;
             justify-content: center;
             align-items: center;
-            .avatar{
+
+            .avatar {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                .top{
-                    height: 100%;
-                    width: 100%;
+
+                .top {
+                    max-width: 200px;
+                    max-width: 200px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    img{
-                        height: auto;
-                        width: auto;
-                        border-radius: 50%;           
+
+                    img {
+                        @include mobile {
+                            max-height: 125px;
+                            max-width: 125px;
+                        }
+
+                        @include tablet {
+                            max-height: 150px;
+                            max-width: 150px;
+                        }
+
+                        @include large {
+                            max-height: 250px;
+                            max-width: 250px;
+                        }
+
+                        max-width: 200px;
+                        max-width: 200px;
+                        border-radius: 50%;
                     }
                 }
-                .bottom{
-                    h1{
-                        @include mobile{
+
+                .bottom {
+                    h1 {
+                        @include mobile {
                             font-size: 20px;
                         }
+
                         font-weight: 300;
                         color: white;
                         height: auto;
@@ -114,46 +165,69 @@
                         padding-top: 30px;
                         text-align: center;
                     }
-                    h2{
-                        @include mobile{
+
+                    h2 {
+                        @include mobile {
                             font-size: 12px;
                         }
+
                         font-weight: 100;
                         font-size: 15px;
                         text-align: center;
                         color: white;
                     }
-                
+
                 }
             }
         }
-        .michael{
-            flex:.33;
+
+        .michael {
+            flex: .33;
             display: flex;
             justify-content: center;
             align-items: center;
-            .avatar{
+
+            .avatar {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                .top{
+
+                .top {
                     height: 100%;
                     width: 100%;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    img{
-                        height: auto;
-                        width: auto;
-                        border-radius: 50%;           
+
+                    img {
+                        @include mobile {
+                            max-height: 125px;
+                            max-width: 125px;
+                        }
+
+                        @include tablet {
+                            max-height: 150px;
+                            max-width: 150px;
+                        }
+
+                        @include large {
+                            max-height: 250px;
+                            max-width: 250px;
+                        }
+
+                        max-width: 200px;
+                        max-width: 200px;
+                        border-radius: 50%;
                     }
                 }
-                .bottom{
-                    h1{
-                        @include mobile{
+
+                .bottom {
+                    h1 {
+                        @include mobile {
                             font-size: 20px;
                         }
+
                         font-weight: 300;
                         color: white;
                         height: auto;
@@ -161,19 +235,21 @@
                         padding-top: 30px;
                         text-align: center;
                     }
-                    h2{
-                        @include mobile{
+
+                    h2 {
+                        @include mobile {
                             font-size: 12px;
                         }
+
                         font-weight: 100;
                         font-size: 15px;
                         text-align: center;
                         color: white;
                     }
-                
+
                 }
             }
         }
     }
-    
+
 }
